--- a/index.html
+++ b/index.html
@@ -3,8 +3,39 @@
 <head>
     <title>Easy Proxy</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--Bootstrap CSS-->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <!--Bootstrap JavaScript-->
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/popper.js/dist/popper.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </head>
 <body>
 <h1>Easy Proxy</h1>
+<div class="container-fluid">
+    <div class="form-group">
+        <div class="form-group row">
+            <label class="col-form-label col-form-label-sm col-3 offset-1" for="server-dir">
+                文件夹:
+            </label>
+            <div class="col-7">
+                <input type="file" class="form-control form-control-sm" id="server-dir">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-form-label col-form-label-sm col-3 offset-1" for="server-port">
+                端口:
+            </label>
+            <div class="col-7">
+                <input type="number" class="form-control form-control-sm" id="server-port">
+            </div>
+        </div>
+        <div class="row">
+            <button class="btn btn-sm btn-success col-3 offset-2">开始</button>
+            <button class="btn btn-sm btn-danger col-3 offset-2">停止</button>
+        </div>
+    </div>
+</div>
 </body>
 </html>
